force-app/main/default/objects/Adjustment__c/fields/Adjustment_Category__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Category__c</fullName>
    <label>Adjustment Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Adjustment_Type</valueSetName>
    </valueSet>
</CustomField>