force-app/main/default/objects/Adjustment__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge</label>
    <referenceTo>cllease__Charge__c</referenceTo>
    <relationshipLabel>Adjustments</relationshipLabel>
    <relationshipName>Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>