force-app/main/default/objects/Adjustment__c/fields/Charge_Bill_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Bill_Name__c</fullName>
    <formula>TRIM(Charge__r.Name +    Due_Detail_Line__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge/Bill Name</label>
    <type>Text</type>
</CustomField>