force-app/main/default/objects/Adjustment__c/fields/Due_Detail_Line__c.field-meta.xml
<CustomField>
    <fullName>Due_Detail_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Due Detail Line</label>
    <referenceTo>cllease__Due_Detail_Lines__c</referenceTo>
    <relationshipLabel>Adjustments</relationshipLabel>
    <relationshipName>Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>