force-app/main/default/objects/Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Adjustment_Type__c</columns>
    <columns>Charge__c</columns>
    <columns>Credit__c</columns>
    <columns>Debit__c</columns>
    <columns>Due_Detail_Line__c</columns>
    <columns>Invoice__c</columns>
    <columns>Tax_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>